--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <logback.version>1.2.3</logback.version>
         <spring.version>5.0.5.RELEASE</spring.version>
+        <annotation-api.version>1.3.2</annotation-api.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -30,6 +31,12 @@
                     <artifactId>spring-context</artifactId>
                     <version>${spring.version}</version>
                 </dependency>
+            <!--Annotation API-->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation-api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
