Added events and other items

--- a/console/pom.xml
+++ b/console/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>console</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.stradtkt</groupId>
+            <artifactId>core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
