--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath/>
+    </parent>
     <modules>
         <module>core</module>
         <module>console</module>
+        <module>web</module>
     </modules>
     <groupId>com.stradtkt</groupId>
     <artifactId>guess-the-number-game</artifactId>
@@ -14,31 +21,5 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <logback.version>1.2.3</logback.version>
-        <spring.version>5.0.5.RELEASE</spring.version>
-        <annotation-api.version>1.3.2</annotation-api.version>
     </properties>
-    <dependencyManagement>
-        <dependencies>
-            <!--Logging-->
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <!--Spring-->
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <!--Annotation API-->
-            <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>${annotation-api.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
 </project>
